vbnc/vbnc/tests/Errors/Dimonnewline.vb
Module DimNewLIne
    Public Function test()
        Dim 
        a = 10
    End Function
End Module
